--- a/tests/test.yml
+++ b/tests/test.yml
@@ -40,11 +40,9 @@
       changed_when: kubectl_version_result.rc != 0
 
     - name: start service
-      command: service docker start
-      args:
-        warn: false
-      register: service_start_result
-      changed_when: service_start_result.rc != 0
+      service:
+        name: docker
+        state: started
 
     - name: docker version
       command: docker version
