lxd init --preseed < .travis.lxd.yml

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -50,7 +50,7 @@
       changed_when: docker_version_result.rc != 0
 
     - name: minikube start
-      command: su -l -s /bin/bash -c 'minikube start --vm-driver=none --kubernetes-version=v1.12.3'
+      command: su -l -s /bin/bash -c 'minikube start --vm-driver=none --apiserver-name=minikube --kubernetes-version=v1.12.3 --extra-config=kubelet.cgroup-driver=systemd'
       args:
         warn: false
       register: mimikube_start_result
