--- a/meta/main.yml
+++ b/meta/main.yml
@@ -28,8 +28,10 @@ galaxy_info:
         - bionic
     - name: EL
       versions:
-        - 6
         - 7
+    - name: opensuse
+      versions:
+        - 15
   galaxy_tags:
     - system
 dependencies: []
