--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -14,9 +14,27 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+- name: configure selinux
+  selinux:
+    policy: "targeted"
+    state: "permissive"
+  tags: minikube
+
+- name: modify selinux in runtime
+  shell: |
+    set -o pipefail
+    setenforce 0
+  args:
+    executable: "/bin/bash"
+  changed_when: false
+  ignore_errors: true
+  tags: minikube
+
 - name: yum install
   yum:
     name: "{{ item.name }}"
     state: "{{ item.state }}"
   with_items: "{{ _yum }}"
+  register: result
+  until: result is succeeded
   tags: minikube
