--- a/vars/centos-7.yml
+++ b/vars/centos-7.yml
@@ -15,7 +15,11 @@
 # limitations under the License.
 
 _yum: [
+  { state: "latest", name: "conntrack-tools" },
   { state: "latest", name: "ebtables" },
   { state: "latest", name: "ethtool" },
+  { state: "latest", name: "iproute" },
+  { state: "latest", name: "iptables" },
   { state: "latest", name: "socat" },
+  { state: "latest", name: "util-linux" },
 ]
