--- a/vars/ubuntu-18.04.yml
+++ b/vars/ubuntu-18.04.yml
@@ -15,7 +15,12 @@
 # limitations under the License.
 
 _apt: [
+  { state: "latest", name: "conntrack" },
   { state: "latest", name: "ebtables" },
   { state: "latest", name: "ethtool" },
+  { state: "latest", name: "iproute2" },
+  { state: "latest", name: "iptables" },
+  { state: "latest", name: "mount" },
   { state: "latest", name: "socat" },
+  { state: "latest", name: "util-linux" },
 ]
