--- a/molecule/ubuntu-18.04/playbook.yml
+++ b/molecule/ubuntu-18.04/playbook.yml
@@ -43,11 +43,10 @@
         state: "present"
 
     - name: patch /etc/resolv.conf
-      file:
-        src: "/run/systemd/resolve/resolv.conf"
-        dest: "/etc/resolv.conf"
-        state: "link"
-        force: true
+      lineinfile:
+        path: "/etc/resolv.conf"
+        regexp: "^search"
+        state: "absent"
 
     - name: start service
       service:
