partly rollback /etc/resolv.conf patch for ubuntu

--- a/molecule/ubuntu-16.04/playbook.yml
+++ b/molecule/ubuntu-16.04/playbook.yml
@@ -43,10 +43,11 @@
         state: "present"
 
     - name: patch /etc/resolv.conf
-      lineinfile:
-        path: "/etc/resolv.conf"
-        regexp: "^search"
-        state: "absent"
+      file:
+        src: "/run/resolvconf/resolv.conf"
+        dest: "/etc/resolv.conf"
+        state: "link"
+        force: true
 
     - name: start service
       service:
