--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,9 @@ matrix:
 
 before_install:
   - |
-    sudo apt-get update && sudo apt-get -y dist-upgrade
-
-  - |
     sudo apt-get -y purge lxc-* lxd-* && sudo apt-get -y autoremove
     sudo apt-get update && sudo apt-get install -y snapd
-    sudo snap install lxd
+    sudo snap refresh && sudo snap install lxd
     sudo lxd init --preseed < .travis.lxd.yml
 
   - |
