--- a/molecule/centos-7/playbook.yml
+++ b/molecule/centos-7/playbook.yml
@@ -43,10 +43,10 @@
         state: "present"
 
     - name: patch /etc/resolv.conf
-      lineinfile:
-        path: "/etc/resolv.conf"
-        regexp: "^search"
-        state: "absent"
+      file:
+        dest: "/etc/resolv.conf"
+        state: "file"
+        force: true
 
     - name: start service
       service:
