--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -22,8 +22,8 @@
   src: https://github.com/alvistack/ansible-role-docker
   version: develop
 
-- name: cni-plugins
-  src: https://github.com/alvistack/ansible-role-cni-plugins
+- name: kubernetes-cni
+  src: https://github.com/alvistack/ansible-role-kubernetes-cni
   version: develop
 
 - name: kubectl
