--- a/molecule/suse-15/playbook.yml
+++ b/molecule/suse-15/playbook.yml
@@ -34,26 +34,6 @@
       register: result
       changed_when: result is not succeeded
 
-    - name: patch /etc/hostname
-      lineinfile:
-        path: "/etc/hosts"
-        regexp: "^{{ ansible_default_ipv4.address }} minikube"
-        line: "{{ ansible_default_ipv4.address }} minikube"
-        backrefs: true
-        state: "present"
-
-    - name: patch /etc/resolv.conf
-      file:
-        dest: "/etc/resolv.conf"
-        state: "file"
-        force: true
-
-    - name: patch /.dockerenv
-      copy:
-        dest: "/.dockerenv"
-        content: ""
-        force: false
-
     - name: start service
       service:
         name: docker
@@ -68,6 +48,7 @@
           --extra-config=kubeadm.ignore-preflight-errors=FileContent--proc-sys-net-bridge-bridge-nf-call-iptables,SystemVerification \
           --extra-config=kubelet.cgroup-driver=systemd \
           --extra-config=kubelet.network-plugin=cni \
+          --extra-config=kubelet.resolv.conf={{ kubelet_resolv_conf }} \
           --kubernetes-version={{ kubernetes_version }} \
           --network-plugin=cni \
           --vm-driver=none
