--- a/vars/ubuntu-18.04.yml
+++ b/vars/ubuntu-18.04.yml
@@ -24,3 +24,5 @@ _apt: [
   { state: "latest", name: "socat" },
   { state: "latest", name: "util-linux" },
 ]
+
+_kubelet_resolv_conf: "/run/systemd/resolve/resolv.conf"
