--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,6 +17,9 @@
 # Kubernetes version.
 kubernetes_version: "v1.14.1"
 
+# PodSubnet is the subnet used by pods.
+pod_subnet: "10.233.64.0/18"
+
 # ResolverConfig is the resolver configuration file used as the basis
 # for the container DNS resolution configuration.
 kubelet_resolv_conf: "{{ _kubelet_resolv_conf }}"
