--- a/molecule/centos-7/playbook.yml
+++ b/molecule/centos-7/playbook.yml
@@ -22,49 +22,21 @@
     - role: docker
     - role: kubernetes-cni
     - role: kubectl
-      kubectl_version: "{{ kubernetes_version }}"
     - role: minikube
 
 - hosts: all
   become: true
   remote_user: root
   tasks:
-    - name: minikube version
-      command: minikube version
-      register: result
-      changed_when: result is not succeeded
-
-    - name: start service
-      service:
-        name: docker
-        state: started
-      changed_when: false
-      ignore_errors: true
-
-    - name: minikube start
+    - name: install pod network add-on (flannel)
       shell: |
         set -o pipefail
-        minikube start \
-          --extra-config=kubeadm.ignore-preflight-errors=FileContent--proc-sys-net-bridge-bridge-nf-call-iptables,SystemVerification \
-          --extra-config=kubelet.cgroup-driver=systemd \
-          --extra-config=kubelet.network-plugin=cni \
-          --extra-config=kubelet.resolv.conf={{ kubelet_resolv_conf }} \
-          --kubernetes-version={{ kubernetes_version }} \
-          --network-plugin=cni \
-          --vm-driver=none
+        curl -skL https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml > /tmp/kube-flannel.yml
+        sed -i 's/{{ "10.244.0.0/16" | regex_escape() }}/{{ pod_subnet | regex_escape() }}/g' /tmp/kube-flannel.yml
+        kubectl apply -f /tmp/kube-flannel.yml
       args:
         executable: "/bin/bash"
-      register: result
-      until: result is succeeded
-      changed_when: result is not succeeded
-      ignore_errors: true
-
-    - name: install pod network add-on (weave)
-      shell: |
-        set -o pipefail
-        kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
-      args:
-        executable: "/bin/bash"
+      when: inventory_hostname == ansible_play_hosts[0]
       register: result
       until: result is succeeded
       changed_when: result is not succeeded
