--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -29,3 +29,7 @@
 - name: kubernetes-cni
   src: https://github.com/alvistack/ansible-role-kubernetes-cni
   version: develop
+
+- name: python
+  src: https://github.com/alvistack/ansible-role-python
+  version: develop
