--- a/molecule/centos-7/playbook.yml
+++ b/molecule/centos-7/playbook.yml
@@ -19,6 +19,7 @@
   remote_user: root
   roles:
     - role: bootstrap
+    - role: python
     - role: docker
     - role: kubernetes-cni
     - role: kubectl
