--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,6 +20,9 @@ kubernetes_version: "v1.14.1"
 # PodSubnet is the subnet used by pods.
 pod_subnet: "10.233.64.0/18"
 
+# driver that the kubelet uses to manipulate cgroups on the host (cgroupfs or systemd)
+kubelet_cgroup_driver: "systemd"
+
 # ResolverConfig is the resolver configuration file used as the basis
 # for the container DNS resolution configuration.
 kubelet_resolv_conf: "{{ _kubelet_resolv_conf }}"
