--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -92,7 +92,7 @@
     set -o pipefail
     minikube start \
       --extra-config=kubeadm.ignore-preflight-errors=FileContent--proc-sys-net-bridge-bridge-nf-call-iptables,SystemVerification \
-      --extra-config=kubelet.cgroup-driver=systemd \
+      --extra-config=kubelet.cgroup-driver={{ kubelet_cgroup_driver }} \
       --extra-config=kubelet.network-plugin=cni \
       --extra-config=kubelet.resolv-conf={{ kubelet_resolv_conf }} \
       --kubernetes-version={{ kubernetes_version }} \
