--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,7 @@
 kubernetes_version: "v1.14.1"
 
 # PodSubnet is the subnet used by pods.
-pod_subnet: "10.233.64.0/18"
+kubernetes_pod_subnet: "10.233.64.0/18"
 
 # driver that the kubelet uses to manipulate cgroups on the host (cgroupfs or systemd)
 kubelet_cgroup_driver: "systemd"
