--- a/molecule/ubuntu-16.04/playbook.yml
+++ b/molecule/ubuntu-16.04/playbook.yml
@@ -35,7 +35,7 @@
       shell: |
         set -o pipefail
         curl -skL https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml > /tmp/kube-flannel.yml
-        sed -i 's/{{ "10.244.0.0/16" | regex_escape() }}/{{ pod_subnet | regex_escape() }}/g' /tmp/kube-flannel.yml
+        sed -i 's/{{ "10.244.0.0/16" | regex_escape() }}/{{ kubernetes_pod_subnet | regex_escape() }}/g' /tmp/kube-flannel.yml
         kubectl apply -f /tmp/kube-flannel.yml
       args:
         executable: "/bin/bash"
