with_items -> loop

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -55,7 +55,7 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0755') }}"
     state: "{{ item.state | default('directory') }}"
-  with_items:
+  loop:
     - { dest: "/etc/kubernetes" }
     - { dest: "/etc/kubernetes/addons" }
     - { dest: "/etc/kubernetes/manifests" }
@@ -70,7 +70,7 @@
     owner: "{{ item.owner | default('root') }}"
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
-  with_items:
+  loop:
     - { dest: "/root/.minikube/config/config.json" }
   tags: minikube
 
@@ -79,7 +79,7 @@
     url: "{{ item.url }}"
     dest: "{{ item.dest }}"
     checksum: "{{ item.checksum }}"
-  with_items:
+  loop:
     - "{{ minikube_download }}"
   register: result
   until: result is succeeded
@@ -92,7 +92,7 @@
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
     state: "{{ item.state | default('file') }}"
-  with_items:
+  loop:
     - { dest: "/root/.minikube/config/config.json" }
     - { dest: "/usr/local/bin/minikube", mode: "0755" }
   tags: minikube
@@ -101,7 +101,7 @@
   service:
     name: "{{ item.name }}"
     state: "{{ item.state }}"
-  with_items:
+  loop:
     - { state: "started", name: "docker" }
   changed_when: false
   ignore_errors: true
