--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -61,6 +61,7 @@
     - { dest: "/etc/kubernetes/manifests" }
     - { dest: "/root/.minikube/config" }
     - { dest: "/usr/local/bin" }
+    - { dest: "{{ minikube_download.dest | dirname }}" }
   tags: minikube
 
 - name: copy templates
@@ -83,6 +84,18 @@
     - "{{ minikube_download }}"
   register: result
   until: result is succeeded
+  tags: minikube
+
+- name: copy archive
+  copy:
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+    owner: "{{ item.owner | default('root') }}"
+    group: "{{ item.group | default('root') }}"
+    mode: "{{ item.mode | default('0644') }}"
+    remote_src: true
+  loop:
+    - { src: "{{ minikube_download.dest }}", dest: "/usr/local/bin/minikube", mode: "0755" }
   tags: minikube
 
 - name: prepare files
