--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,6 +15,10 @@
 # limitations under the License.
 
 _minikube_download:
+  v1.3.0:
+    url: "https://storage.googleapis.com/minikube/releases/v1.3.0/minikube-linux-amd64"
+    dest: "/var/cache/ansible/minikube-linux-amd64-v1.3.0"
+    checksum: "sha1:024d3560482204e3ef97464f2a6d6276e5d564f6"
   v1.2.0:
     url: "https://storage.googleapis.com/minikube/releases/v1.2.0/minikube-linux-amd64"
     dest: "/var/cache/ansible/minikube-linux-amd64-v1.2.0"
