--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -82,8 +82,8 @@
     checksum: "{{ item.checksum }}"
   loop:
     - "{{ minikube_download }}"
-  register: result
-  until: result is succeeded
+  register: get_url_result
+  until: get_url_result is succeeded
   tags: minikube
 
 - name: copy archive
@@ -96,6 +96,7 @@
     remote_src: true
   loop:
     - { src: "{{ minikube_download.dest }}", dest: "/usr/local/bin/minikube", mode: "0755" }
+  when: get_url_result is changed
   tags: minikube
 
 - name: prepare files
