--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -64,17 +64,6 @@
     - { dest: "{{ minikube_download.dest | dirname }}" }
   tags: minikube
 
-- name: copy templates
-  template:
-    dest: "{{ item.dest }}"
-    src: "{{ item.src | default('./templates' + item.dest + '.j2') }}"
-    owner: "{{ item.owner | default('root') }}"
-    group: "{{ item.group | default('root') }}"
-    mode: "{{ item.mode | default('0644') }}"
-  loop:
-    - { dest: "/root/.minikube/config/config.json" }
-  tags: minikube
-
 - name: download archive
   get_url:
     url: "{{ item.url }}"
@@ -86,17 +75,25 @@
   until: get_url_result is succeeded
   tags: minikube
 
-- name: copy archive
-  copy:
-    src: "{{ item.src }}"
+- name: unarchive package
+  shell: |
+    set -o pipefail
+    cd /usr/local/bin
+    TMP_DIR="`mktemp -d`" && cp {{ minikube_download.dest }} $TMP_DIR/minikube && mv $TMP_DIR/minikube . && rm -rf $TMP_DIR
+  args:
+    executable: "/bin/bash"
+  when: get_url_result is changed
+  tags: minikube
+
+- name: copy templates
+  template:
     dest: "{{ item.dest }}"
+    src: "{{ item.src | default('./templates' + item.dest + '.j2') }}"
     owner: "{{ item.owner | default('root') }}"
     group: "{{ item.group | default('root') }}"
     mode: "{{ item.mode | default('0644') }}"
-    remote_src: true
   loop:
-    - { src: "{{ minikube_download.dest }}", dest: "/usr/local/bin/minikube", mode: "0755" }
-  when: get_url_result is changed
+    - { dest: "/root/.minikube/config/config.json" }
   tags: minikube
 
 - name: prepare files
