--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,9 @@ minikube_download: "{{ _minikube_download[minikube_version] }}"
 # PodSubnet is the subnet used by pods.
 kubernetes_pod_subnet: "10.233.64.0/18"
 
+# IP address of the node. If set, kubelet will use this IP address for the node.
+kubelet_node_ip: "{{ ansible_default_ipv4.address }}"
+
 # driver that the kubelet uses to manipulate cgroups on the host (cgroupfs or systemd)
 kubelet_cgroup_driver: "systemd"
 
