PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"

--- a/molecule/centos-7/playbook.yml
+++ b/molecule/centos-7/playbook.yml
@@ -33,7 +33,9 @@
     - role: kubernetes-flannel
 
   post_tasks:
-    - name: /usr/local/bin/kubectl version
-      command: /usr/local/bin/kubectl version
+    - name: kubectl version
+      environment:
+        PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+      command: kubectl version
       register: result
       changed_when: result is not succeeded
