--- a/molecule/ubuntu-18.04-vagrant/playbook.yml
+++ b/molecule/ubuntu-18.04-vagrant/playbook.yml
@@ -34,7 +34,9 @@
     - role: kubernetes-weave
 
   post_tasks:
-    - name: /usr/local/bin/kubectl version
-      command: /usr/local/bin/kubectl version
+    - name: kubectl version
+      environment:
+        PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+      command: kubectl version
       register: result
       changed_when: result is not succeeded
