Revert "simplify kubelet --resolv-conf"
This reverts commit 23f31c868b59892fd1e04724e512788c3c10229b.

--- a/vars/centos-7.yml
+++ b/vars/centos-7.yml
@@ -22,3 +22,5 @@ _yum:
   - { state: "latest", name: "iptables" }
   - { state: "latest", name: "socat" }
   - { state: "latest", name: "util-linux" }
+
+_kubelet_resolv_conf: "/etc/resolv.conf"
