--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,7 +40,7 @@ kubelet_kubelet_cgroups: "/systemd/system.slice"
 
 # ResolverConfig is the resolver configuration file used as the basis
 # for the container DNS resolution configuration.
-kubelet_resolv_conf: "/etc/resolv.conf"
+kubelet_resolv_conf: "{{ _kubelet_resolv_conf }}"
 
 # BindPort sets the secure port for the API Server to bind to.
 kube_apiserver_bind_port: "6443"
