--- a/vars/redhat-7.yml
+++ b/vars/redhat-7.yml
@@ -22,3 +22,5 @@ _yum:
   - { state: "latest", name: "iptables" }
   - { state: "latest", name: "socat" }
   - { state: "latest", name: "util-linux" }
+
+_kubelet_resolv_conf: "/etc/resolv.conf"
