--- a/vars/suse-15.yml
+++ b/vars/suse-15.yml
@@ -22,3 +22,5 @@ _zypper:
   - { state: "latest", name: "iptables" }
   - { state: "latest", name: "socat" }
   - { state: "latest", name: "util-linux" }
+
+_kubelet_resolv_conf: "/etc/resolv.conf"
