--- a/molecule/ubuntu-16.04/playbook.yml
+++ b/molecule/ubuntu-16.04/playbook.yml
@@ -29,6 +29,7 @@
   become: true
   roles:
     - role: minikube
+      kubelet_node_ip: "{{ ansible_eth1.ipv4.address }}"
     - role: kubernetes-addon-manager
     - role: kubernetes-flannel
 
