https://github.com/kubernetes/minikube/pull/3892

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -135,13 +135,12 @@
     minikube start \
       --apiserver-port={{ kube_apiserver_bind_port }} \
       --extra-config=controller-manager.allocate-node-cidrs=true \
-      --extra-config=controller-manager.cluster-cidr={{ kubernetes_pod_subnet }} \
       --extra-config=kubeadm.ignore-preflight-errors=FileContent--proc-sys-net-bridge-bridge-nf-call-iptables,SystemVerification \
+      --extra-config=kubeadm.pod-network-cidr={{ kubernetes_pod_subnet }} \
       --extra-config=kubelet.cgroup-driver={{ kubelet_cgroup_driver }} \
       --extra-config=kubelet.kubelet-cgroups={{ kubelet_kubelet_cgroups }} \
       --extra-config=kubelet.network-plugin=cni \
       --extra-config=kubelet.node-ip={{ kubelet_node_ip }} \
-      --extra-config=kubelet.pod-cidr={{ kubernetes_pod_subnet }} \
       --extra-config=kubelet.resolv-conf={{ kubelet_resolv_conf }} \
       --extra-config=kubelet.runtime-cgroups={{ kubelet_runtime_cgroups }} \
       --kubernetes-version={{ kubernetes_version }} \
