--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -126,6 +126,8 @@
       --extra-config=kubeadm.ignore-preflight-errors=FileContent--proc-sys-net-bridge-bridge-nf-call-iptables,SystemVerification \
       --extra-config=kubeadm.pod-network-cidr={{ kubernetes_pod_subnet }} \
       --extra-config=kubelet.cgroup-driver={{ kubelet_cgroup_driver }} \
+      --extra-config=kubelet.container-runtime-endpoint={{ kubelet_container_runtime_endpoint }} \
+      --extra-config=kubelet.container-runtime={{ kubelet_container_runtime }} \
       --extra-config=kubelet.kubelet-cgroups={{ kubelet_kubelet_cgroups }} \
       --extra-config=kubelet.network-plugin=cni \
       --extra-config=kubelet.node-ip={{ kubelet_node_ip }} \
